1.Switched from logback to java.util.logging 2. Added Assembly Plugin 3. Code Cleanup